# drake_extension

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/: ci.yaml
.github/workflows/: ci.yaml  wheels.yaml
scripts/: build_wheel.sh  setup_ubuntu  setup_ubuntu.bash  setup_ubuntu.sh
src/: custom_system.cc  custom_system.cpp  drake_extension.cpp  drake_extension_ext.cpp  ext.cpp
src/drake_extension/: __init__.py
tests/: test_custom_system.py  test_simple_adder.py
